tests/machine/x/cpp/left_join_multi.error
/workspace/mochi/tests/machine/x/cpp/left_join_multi.cpp:19:12: error: ‘o’ was not declared in this scope
   19 |   decltype(o.id) orderId;
      |            ^
/workspace/mochi/tests/machine/x/cpp/left_join_multi.cpp:19:12: error: ‘o’ was not declared in this scope
/workspace/mochi/tests/machine/x/cpp/left_join_multi.cpp:20:12: error: ‘c’ was not declared in this scope
   20 |   decltype(c.name) name;
      |            ^
/workspace/mochi/tests/machine/x/cpp/left_join_multi.cpp:20:12: error: ‘c’ was not declared in this scope
/workspace/mochi/tests/machine/x/cpp/left_join_multi.cpp:21:12: error: ‘i’ was not declared in this scope
   21 |   decltype(i) item;
      |            ^
/workspace/mochi/tests/machine/x/cpp/left_join_multi.cpp:21:12: error: ‘i’ was not declared in this scope
/workspace/mochi/tests/machine/x/cpp/left_join_multi.cpp: In lambda function:
/workspace/mochi/tests/machine/x/cpp/left_join_multi.cpp:40:46: error: cannot convert ‘std::string’ {aka ‘std::__cxx11::basic_string<char>’} to ‘int’ in initialization
   40 |             __items.push_back(Result{o.id, c.name, i});
      |                                            ~~^~~~
      |                                              |
      |                                              std::string {aka std::__cxx11::basic_string<char>}
/workspace/mochi/tests/machine/x/cpp/left_join_multi.cpp:44:46: error: cannot convert ‘std::string’ {aka ‘std::__cxx11::basic_string<char>’} to ‘int’ in initialization
   44 |             __items.push_back(Result{o.id, c.name, i});
      |                                            ~~^~~~
      |                                              |
      |                                              std::string {aka std::__cxx11::basic_string<char>}
